--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,8 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
-    testImplementation 'com.codeborne:selenide:5.19.0'
+    testImplementation 'org.seleniumhq.selenium:selenium-java:4.2.1'
+    testImplementation("io.github.bonigarcia:webdrivermanager:5.3.1")
 }
 
 test {
