--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
     testImplementation 'org.seleniumhq.selenium:selenium-java:4.2.1'
-    testImplementation("io.github.bonigarcia:webdrivermanager:5.3.1")
+//    testImplementation("io.github.bonigarcia:webdrivermanager:5.3.1")
 }
 
 test {
